--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ attrs==25.4.0
 backoff==2.2.1
 beautifulsoup4==4.14.2
 black==25.9.0
+boto3==1.40.50
+botocore==1.40.50
 cachetools==6.2.0
 certifi==2025.10.5
 cffi==2.0.0
@@ -51,11 +53,13 @@ huggingface-hub==0.35.3
 humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.7.0
+iniconfig==2.1.0
 ipykernel==6.30.1
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
+jmespath==1.0.1
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -127,6 +131,7 @@ pi_heif==1.1.1
 pikepdf==9.11.0
 pillow==11.3.0
 platformdirs==4.4.0
+pluggy==1.6.0
 posthog==5.4.0
 prompt_toolkit==3.0.52
 proto-plus==1.26.1
@@ -148,6 +153,7 @@ pypandoc==1.15
 pyparsing==3.2.5
 pypdf==6.1.1
 pypdfium2==4.30.0
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-iso639==2025.2.18
@@ -167,6 +173,7 @@ requests-toolbelt==1.0.0
 rich==14.1.0
 rpds-py==0.27.1
 rsa==4.9.1
+s3transfer==0.14.0
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
