--- a/requirements.txt
+++ b/requirements.txt
@@ -137,6 +137,7 @@ prompt_toolkit==3.0.52
 proto-plus==1.26.1
 protobuf==6.32.1
 psutil==7.1.0
+psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==21.0.0
