--- a/pipelines/pipeline_chroma.yaml
+++ b/pipelines/pipeline_chroma.yaml
@@ -1,7 +1,7 @@
 source:
   type: web
   config:
-    url: "https://ko.wikipedia.org/wiki/%EC%9E%84%EB%B2%A0%EB%94%A9"
+    url: "https://ko.wikipedia.org/wiki/임베딩"
 
 chunker:
   type: recursive_character
@@ -17,5 +17,6 @@ embedder:
 sink:
   type: chromadb
   config:
-    path: "./chromadb"
-    collection_name: "my_chroma_collection"
+    host: "localhost" 
+    port: 8000        
+    collection_name: "my_server_collection"
