--- a/requirements.txt
+++ b/requirements.txt
@@ -107,9 +107,10 @@ nvidia-nccl-cu12==2.27.3
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvtx-cu12==12.8.90
 olefile==0.47
-omegaconf==2.3.0
+omega-conf==2.3.0
 onnx==1.19.0
 onnxruntime==1.23.1
+openai
 opencv-python==4.12.0.88
 openpyxl==3.1.5
 opentelemetry-api==1.37.0
@@ -156,6 +157,7 @@ pypdf==6.1.1
 pypdfium2==4.30.0
 pytest==8.4.2
 python-dateutil==2.9.0.post0
+python-dotenv
 python-docx==1.2.0
 python-iso639==2025.2.18
 python-magic==0.4.27
