--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 accelerate==1.10.1
 aiofiles==24.1.0
+altair==5.5.0
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.11.0
+asgiref==3.10.0
 asttokens==3.0.0
 attrs==25.4.0
 backoff==2.2.1
+bcrypt==5.0.0
 beautifulsoup4==4.14.2
 black==25.9.0
+blinker==1.9.0
 boto3==1.40.50
 botocore==1.40.50
+build==1.3.0
 cachetools==6.2.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.3
+chroma-hnswlib==0.7.3
+chromadb==1.1.1
 chromadb-client==1.1.1
 click==8.3.0
 collection==0.1.6
@@ -28,15 +35,19 @@ decorator==5.2.1
 Deprecated==1.2.18
 deprecation==2.1.0
 distro==1.9.0
+durationpy==0.10
 effdet==0.4.1
 emoji==2.15.0
 et_xmlfile==2.0.0
 executing==2.2.1
+fastapi==0.119.0
 filelock==3.19.1
 filetype==1.2.0
 flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
 google-api-core==2.25.2
 google-auth==2.41.1
 google-cloud-vision==3.10.2
@@ -48,17 +59,20 @@ h11==0.16.0
 hf-xet==1.1.10
 html5lib==1.1
 httpcore==1.0.9
+httptools==0.7.1
 httpx==0.28.1
 huggingface-hub==0.35.3
 humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.7.0
+importlib_resources==6.5.2
 iniconfig==2.1.0
 ipykernel==6.30.1
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
+jiter==0.11.0
 jmespath==1.0.1
 joblib==1.5.2
 jsonpatch==1.33
@@ -68,6 +82,7 @@ jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.9
+kubernetes==34.1.0
 lance-namespace==0.0.6
 lance-namespace-urllib3-client==0.0.17
 lancedb==0.25.1
@@ -85,9 +100,11 @@ matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml_dtypes==0.5.3
+mmh3==5.2.0
 mpmath==1.3.0
 msoffcrypto-tool==5.4.2
 mypy_extensions==1.1.0
+narwhals==2.7.0
 nest-asyncio==1.6.0
 networkx==3.5
 nltk==3.9.2
@@ -106,19 +123,24 @@ nvidia-cusparselt-cu12==0.7.1
 nvidia-nccl-cu12==2.27.3
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvtx-cu12==12.8.90
+oauthlib==3.3.1
 olefile==0.47
-omega-conf==2.3.0
+omegaconf==2.3.0
 onnx==1.19.0
 onnxruntime==1.23.1
-openai
+openai==2.3.0
 opencv-python==4.12.0.88
 openpyxl==3.1.5
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
 opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-instrumentation==0.58b0
+opentelemetry-instrumentation-asgi==0.58b0
+opentelemetry-instrumentation-fastapi==0.58b0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
+opentelemetry-util-http==0.58b0
 orjson==3.11.3
 overrides==7.7.0
 packaging==25.0
@@ -140,6 +162,7 @@ protobuf==6.32.1
 psutil==7.1.0
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
+pulsar-client==3.8.0
 pure_eval==0.2.3
 pyarrow==21.0.0
 pyasn1==0.6.1
@@ -149,16 +172,20 @@ pycocotools==2.0.10
 pycparser==2.23
 pydantic==2.11.10
 pydantic_core==2.33.2
+pydeck==0.9.1
+pydeps==3.0.1
 Pygments==2.19.2
 pylance==0.38.1
 pypandoc==1.15
 pyparsing==3.2.5
 pypdf==6.1.1
 pypdfium2==4.30.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 pytest==8.4.2
 python-dateutil==2.9.0.post0
-python-dotenv
 python-docx==1.2.0
+python-dotenv==1.1.1
 python-iso639==2025.2.18
 python-magic==0.4.27
 python-multipart==0.0.20
@@ -169,9 +196,11 @@ pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
 RapidFuzz==3.14.1
+redis==6.4.0
 referencing==0.36.2
 regex==2025.9.18
 requests==2.32.5
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==14.1.0
 rpds-py==0.27.1
@@ -183,15 +212,20 @@ scipy==1.16.2
 sentence-transformers==5.1.1
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
 stack-data==0.6.3
+starlette==0.48.0
+stdlib-list==0.11.1
+streamlit==1.50.0
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 timm==1.0.20
 tokenizers==0.22.1
+toml==0.10.2
 torch==2.8.0
 torchvision==0.23.0
 tornado==6.5.2
@@ -208,9 +242,15 @@ unstructured==0.18.15
 unstructured-client==0.42.3
 unstructured-inference==1.0.5
 unstructured.pytesseract==0.3.15
-urllib3==2.5.0
+urllib3==2.3.0
+uvicorn==0.37.0
+uvloop==0.21.0
+watchdog==6.0.0
+watchfiles==1.1.0
 wcwidth==0.2.14
 webencodings==0.5.1
+websocket-client==1.9.0
+websockets==15.0.1
 wrapt==1.17.3
 xlrd==2.0.2
 xlsxwriter==3.2.9
